# palette

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: deploy.yml
palette/: art_catalog.py  art_labeler.py  classify_art.py  train_art_classifier.py
palette-ml/: classify_art.py  pyproject.toml  train_art_classifier.py
src/: middleware.ts
src/app/: layout.tsx  page.tsx
src/app/auth/callback/: route.ts
src/app/auth/login/: LoginClient.tsx  page.tsx
src/components/: ItemsManagement.tsx
src/lib/: supabase-service.ts
src/lib/supabase/: client.ts  server.ts
src/pages/api/: items.ts
src/types/: item.ts
supabase/migrations/: 20240126_initial_schema.sql
tests/: test_art_catalog.py  test_catalog_numbers.py
