[tool.poetry]
name = "palette"
version = "0.1.0"
description = ""
authors = ["Sebastien Rosset"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
imagehash = "^4.3.1"
pandas = "^2.2.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
