[tool.poetry]
name = "palette"
version = "0.1.0"
description = ""
authors = ["Sebastien Rosset"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
imagehash = "^4.3.1"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"


[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
